--- a/style.css
+++ b/style.css
@@ -118,6 +118,183 @@ main.container {
 .accordion-section {
     background-color: #fff;
     max-width: 920px;
+    height: 535px;
     padding: 1.5rem;
     border-radius: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    align-items: center;
+}
+
+.images, .accordion-content {
+    flex: 1;
+}
+
+.accordion-content {
+    margin-top: -7rem;
+    z-index: 111;
+}
+
+.accordion {
+    border-bottom: 1px solid var(--dividers-light-grayish-blue);
+    padding-bottom: 1rem;
+}
+
+.accordion-title {
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin-bottom: .5rem;
+    text-align: center;
+}
+
+
+.accordion h2 button{
+    cursor: pointer;
+    width: 100%;
+    font-size: 13px;
+    font-weight: var(--fw-normal);
+    text-align: left;
+    color: var(--text-very-dark-blue);
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+
+    border: none;
+    background: transparent;
+    margin-bottom: 0.6875rem;
+
+
+}
+
+.accordion h2 button:hover {
+    color: var(--soft-red);
+}
+
+.accordion h2 button .arrow {
+    transition: all .5s;
+
+}
+.QandA {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+
+.answer {
+    height: 0;
+    overflow: hidden;
+    color: var(--text-dark-grayish-blue);
+    transition: all .5s;
+}
+
+.accordion.active .answer{
+    height: 36px;
+}
+
+.accordion.active h2 button {
+    font-weight: var(--fw-bold);
+}
+
+.accordion.active h2 button .arrow {
+    transform: rotate(180deg);
+    font-weight: var(--fw-bold);
+}
+
+
+.images {
+    position: relative;
+}
+
+.mobile {
+    display: flex;
+    flex-direction: column;
+    transform: translateY(-8rem);
+    /* width: 300px; */
+}
+
+.mobile-woman {
+
+}
+
+.mobile-pattern {
+    margin-top: -4rem;
+}
+
+.box {
+    display: none;
+}
+
+.desktop {
+    display: none;
+}
+
+@media screen and (min-width:750px) {
+    
+
+    .accordion-section {
+       flex-direction: row;
+        align-items: center;
+        padding: 2rem;
+        overflow: hidden;
+        width: 57.5rem;
+        justify-content: start;
+    }
+
+    .accordion-content {
+        margin-top: 0;
+    }
+
+    .accordion-title {
+        margin-bottom: 2.1875rem;
+    }
+
+
+
+ .images {
+    position: relative;
+ }
+
+ .desktop{
+    display: block;
+ }
+
+
+ .pattern {
+    position: absolute;
+    transform: translate(-38rem, -32rem);
+    max-width: 950px;
+ }
+
+.woman {
+    position: absolute;
+    min-width: 450px;
+    transform: translate(-7rem, -10rem);
+    z-index: 1;
+}
+
+ .box {
+    display: block;
+    position: absolute;
+    transform: translate(-7rem, 5rem);
+
+    z-index: 11;
+}
+
+
+
+.mobile {
+    display: none;
+}
+
+
+
+    .question {
+        font-size: 14px;
+    }
 }
