--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ main.container {
 
 .accordion {
     border-bottom: 1px solid var(--dividers-light-grayish-blue);
-    padding-bottom: 1rem;
+    padding-bottom: 1.125rem;
 }
 
 .accordion-title {
@@ -173,6 +173,10 @@ main.container {
 
 .accordion h2 button:hover {
     color: var(--soft-red);
+}
+
+.accordion h2 button:tab-focus    {
+    border: 1px dotted var(--soft-red);
 }
 
 .accordion h2 button .arrow {
@@ -215,12 +219,9 @@ main.container {
     display: flex;
     flex-direction: column;
     transform: translateY(-8rem);
-    /* width: 300px; */
 }
 
-.mobile-woman {
 
-}
 
 .mobile-pattern {
     margin-top: -4rem;
